--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -94,7 +94,7 @@
 	<% cols = 1 %>
 	<% i = 0 %>
 
-	<% @user.projects_owned.each do |project|%> 
+	<% @user.products_owned.each do |project|%> 
 
 	   	<% if cols == 1%>
 	   		<div class="row">
