--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -19,7 +19,7 @@
       <div class="panel-heading"><h3 class="panel-title">Release Details</h3></div>
         <div align="center">
    
-              <%= simple_form_for(@user_story) do |f| %>
+              <%= simple_form_for(@release) do |f| %>
 
                 <%= f.error_notification %>
                 <div class="form-inputs">
