--- a/app/views/user_story_tasks/_form.html.erb
+++ b/app/views/user_story_tasks/_form.html.erb
@@ -1,14 +1,26 @@
-<%= simple_form_for(@user_story_task) do |f| %>
-  <%= f.error_notification %>
+<div class="container">
 
-  <div class="form-inputs">
-    <%= f.input :description %>
-    <%= f.input :user_story_id %>
-    <%= f.input :stimated_effort_in_hours %>
-    <%= f.input :actual_effort_in_hours %>
-  </div>
+        
+        <p>&nbsp;</p>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+    <div class="panel panel-primary" width="500px">
+      <div class="panel-heading"><h3 class="panel-title">Task Details</h3></div>
+        <div align="center">
+   
+              <%= simple_form_for(@user_story_task) do |f| %>
+
+                <%= f.error_notification %>
+                <div class="form-inputs">
+                  <%= f.input :description, :input_html => {:style=> 'width: 300px', :align=>"center"} %>
+                  <%= f.input :stimated_effort_in_hours, :input_html => {:style=> 'width: 100px', :align=>"center"} %>
+                  <%= f.hidden_field :user_story_id, :value => @user_story_task.user_story_id%>
+                </div>
+
+                <div class="form-actions">
+                  <%= f.button :submit, :class => "btn btn-primary"%>
+                  <p>&nbsp;</p>
+                </div>
+              <% end %>
+        </div>
+    </div>
+</div>        
