--- a/app/views/projects/releases_master.html.erb
+++ b/app/views/projects/releases_master.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
 <h1 align="center"><span class="label label-primary">Releases for Project: <%= @project.name %></span></h1>
 <p>&nbsp;</p>
-	<p align="center"><%= link_to 'Add Release',new_release_path(:project_id => @project.id), :class => "btn btn-default btn-lg"%></p>
 		    <p>&nbsp;</p>
 			<% cols = 1 %>
 			<% i = 0 %>		   		
@@ -17,8 +16,8 @@
 				   				<strong>Release #:  </strong><%= release.id %><br>
 				   				<strong>Amount of Sprints:  </strong><%= release.sprints.count %><br>
 				   					<div class="panel-footer">
-					   					<%= link_to 'Details', release%>
-									   		<%= link_to 'Delete', release, method: :delete, data: { confirm: 'Are you sure?' } %>									   		
+									   		<%= link_to 'Sprints',sprints_master_path(release)%>
+									   		
 				   					</div>
 				   				</div>
 				   			</div>
