--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -1,12 +1,28 @@
-<%= simple_form_for(@sprint) do |f| %>
-  <%= f.error_notification %>
+<div class="container">
 
-  <div class="form-inputs">
-    <%= f.input :release_id %>
-    <%= f.input :sprint_review %>
-  </div>
+        
+        <p>&nbsp;</p>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+    <div class="panel panel-primary" width="500px">
+      <div class="panel-heading"><h3 class="panel-title">Sprint Details</h3></div>
+        <div align="center">
+
+			<%= simple_form_for(@sprint) do |f| %>
+			  <%= f.error_notification %>
+
+                <div class="form-inputs">
+			    <%= f.input :sprint_review, :input_html => {:style=> 'width: 300px', :align=>"center"}%>
+                </div>
+
+			    <%= f.hidden_field :release_id, :value => @sprint.release.id %>
+                <div class="form-actions">
+                  <%= f.button :submit, :class => "btn btn-primary"%>
+                  <p>&nbsp;</p>
+                </div>
+            <%end%>
+
+
+
+        </div>
+    </div>
+</div>
